--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "homepage": "https://ZhenianaKozhan.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.3",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -19,7 +24,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.3.9",
+    "styled-components": "^5.3.10",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
